# ai-hft

./: .env-example  .gitignore  Cargo.toml  build-tests.sh  fix1.patch  fix_type_mismatches.sh  generate_wallet.js  minimal_test.rs  real_time_arbitrage_demo  real_time_arbitrage_demo.rs  run_real_arbitrage.sh  run_real_trading_test.sh  run_trading.sh  run_trading_executor_test.sh  start_hft_agent.sh  test_statelessvm_connection.sh
config/: sample_high_freq_config.toml  test_config.toml
examples/: basic_tx_test.rs  bundle_test.rs  client_test.rs  complete_tx_test.rs  correct_statelessvm_test.rs  correct_tx_format_test.rs  debug_statelessvm_test.rs  final_fix_test.rs  fixed_statelessvm_test.rs  high_frequency_example.rs  raw_tx_test.rs  real_trading_test.rs  sequence_example.rs  simple_statelessvm_test.rs  simplified_trading_test.rs  stateless_vm_executor.rs  statelessvm_connection_test.rs  statelessvm_format_test.rs  statelessvm_health_check.rs  string_format_test.rs  string_tx_test.rs  trading_executor_test.rs
src/: lib.rs  main.rs
src/data/: ccip_provider.rs  exchange_connector.rs  mod.rs  provider.rs  provider_factory.rs  real_time_monitor.rs
src/examples/: flash_arbitrage_example.rs  high_frequency_example.rs  mod.rs  multi_step_transaction_example.rs
src/execution/: engine.rs  mod.rs  real_time_trader.rs  trading_executor.rs
src/models/: error.rs  llm.rs  mod.rs  strategy.rs  trading.rs
src/reasoning/: analyzer.rs  engine.rs
src/relay/: bundle.rs  encryption.rs  metrics.rs  mod.rs  network.rs  types.rs  validator.rs
src/security/: mod.rs  parallel_verifier.rs  verifier.rs  verifier.rs.bak
src/statelessvm/: client.rs  client_new.rs  mod.rs
src/strategies/: arbitrage.rs  flash_arbitrage.rs  high_frequency.rs  liquidation.rs  manager.rs  mod.rs  triangular_arbitrage.rs
src/utils/: config.rs  performance.rs
src/wallet/: mod.rs
testdata/: create_test_keystore.js  package-lock.json  package.json
testdata/keystore/: test-wallet.json
tests/: encryption_test.rs  parallel_security_test.rs  security_verification_test.rs  security_verification_test.rs.bak  standalone_security_test.rs  stateless_integration_test.rs  verification_modes_test.rs
